--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <ul class="menu">
           <li><a href="PAGES/gatos.html">Gatos</a></li>
           <li><a href="PAGES/perros.html">Perros</a></li>
-          <li><a href="PAGES/tienda.html">Tienda</a></li>
+          <li><a href="PAGES/formularios.html">Formularios</a></li>
           <li><a href="PAGES/contacto.html">Contacto</a></li>
         </ul>
       </nav>
