--- a/PAGES/contacto.html
+++ b/PAGES/contacto.html
@@ -45,37 +45,38 @@
  <!--frase logo-->
   <h1 class="indexTitulo" >Encontrá a tu Mejor Amigo/a </h1>
 
-<!--info adopciones -->
-
-<section class="otraInfo">
 
 
- <div>
-     <h2> A tener en cuenta! </h2>
+<section class="sectionContacto" >
 
-     <p> Se entrevista a los posibles candidatos para cada adopción. Para poder adoptar es necesario ser mayor de edad, tener el consentimiento de todos los integrantes de la familia y acreditar su identidad mediante la presentación del documento de identidad. También se exige la copia de cualquier servicio a nombre del adoptante para poder cotejar la veracidad del domicilio.</p>
+	<div class="contactoFormulario">
+  
+  <p> 
+    <span class="experiencia">
 
-    </div>
-    <div>
-     <h2> Seguimientos!</h2>
+     Contanos tu experiencia de Adopcion en The Pets Center para que podamos compartirla con futuros adoptantes
+    
+    </span>
+  </p>
 
-     <p>Cada animal se entrega en adopción con una chapa identificadora que tiene números de contacto del grupo y un número que corresponde al animal adoptado. Una vez que se efectuó la adopción, se vuelca esa información a una base de datos, que permite tener acceso a la información para llevar a cabo los seguimientos.
-    <span>
-    Se realizan varios llamados a lo largo del tiempo para ver cómo se adaptó a su nuevo hogar.
-    </span></p> 
- </div>
+  <form class="contacto" name="contact">
+    <label><span>	Nombre</span><input name="Nombre" type="text" placeholder="Nombre"/></label>
+    <label><span>Email</span><input name="email" type="email" placeholder="Email"/></label>
+    <label><span>Mensaje</span><textarea name="mensaje" placeholder="Mensaje"></textarea></label>
+    <input name="submit" type="submit" value="Enviar"/>
+  </form>
+   </div>
 
-
-</section>
+  <img src="../IMG/contactanos.png" alt="contactanos"  width="500" height="450"  >
+  </section>
 
 
 <!--mapa contacto-->
 
-<div class="contactoImg">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13138.536098943034!2d-58.402449459008075!3d-34.58812576024568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb57dbce045cd%3A0x2704541ae686099a!2sParque%20Las%20Heras!5e0!3m2!1ses!2sar!4v1648000954028!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe > 
-  <img src="../IMG/contactanos.png" alt="contactanos"  width="500" height="450"  >
 
-</div>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13138.536098943034!2d-58.402449459008075!3d-34.58812576024568!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb57dbce045cd%3A0x2704541ae686099a!2sParque%20Las%20Heras!5e0!3m2!1ses!2sar!4v1648000954028!5m2!1ses!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe > 
+  
+
 
 <section class="condicionesAdopcion">
 
